@@ -5,6 +5,7 @@
 	* Change completion interface from ssize_t to int since Win32 has no
 	  ssize_t.
 	* Add compatibility strcasecmp() for Win32.
+	* Only include "unistd.h" if we have it.
 
 2011-03-05  Bernhard Walle <bernhard@bwalle.de>
 
